# ml_with_scikit-learn

./: .gitignore  README.md  pyproject.toml
Classification/credit-risk/: notebook.ipynb
Classification/diabetes-prediction/: notebook.ipynb
Regression/usa-real-estate-dataset/: main.py  notebook.ipynb
