[tool.poetry]
name = "ml-with-scikit-learn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ml_with_scikit_learn"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
opendatasets = "^0.1.22"
catboost = "^1.2"
scikit-optimize = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
